[package]
name = "pwget"
version = "0.1.0"
authors = ["Craig Brozefsky"]
description = "A simple CLI utility for accessing PWSafev3 databases"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/craigbro/pwget"
repository = "https://github.com/craigbro/pwget"
edition = "2021"
keywords = ["pwsafe", "pwsafev3", "cli"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The derive feature lets us use the simple macro forms
# the env feature allows us to look in the std:env for a value if not provided
clap = { version = "4.0.29", features = ["derive", "env"] }
pwsafer = "0.1.3"
rpassword = "7.2.0"
uuid = { version = "1.2.2" }
clipboard = { version = "0.5.0" }


serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"